src/objects/StatusReport__c.object
<CustomObject>
    <description>Status reports are a great way to formalize the progress of a project at the individual team member level.  Through reports and dashboards, summary reporting can help a project manager quickly gather information and export to excel as needed.</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <label>Current Outcome</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EngagementSummary__c</fullName>
        <label>Status Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedDeliverables__c</fullName>
        <label>Next Upcoming</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PotentialRisks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if there are any potential risks that came up during this assignment.  Please describe the risks using the &quot;risks&quot; tab.</inlineHelpText>
        <label>Has Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>R00N80000002lZ2OEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RisksBlockers__c</fullName>
        <label>Key Issues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusIcon__c</fullName>
        <description>The Status of the project for this status report</description>
        <formula>CASE( StatusIndicator__c, 
&quot;Yellow&quot;,
IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000233dl&amp;oid=00Df0000002MhY1&amp;lastMod=1370876475000&quot;,&quot;Yellow&quot;,15,15),
&quot;Green&quot;,
IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LH&amp;oid=00Df0000002MhY1&amp;lastMod=1386867416000&quot;,&quot;Green&quot;,15,15),
&quot;Red&quot;,
IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LM&amp;oid=00Df0000002MhY1&amp;lastMod=1386867456000&quot;,&quot;Red&quot;,15,15),IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LH&amp;oid=00Df0000002MhY1&amp;lastMod=1386867416000&quot;,&quot;Green&quot;,15,15))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Status of the project for this status report</inlineHelpText>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusIndicator__c</fullName>
        <description>Indicator of the current state of the project, Red, Green or Yellow</description>
        <inlineHelpText>Indicator of the current state of the project, Red, Green or Yellow</inlineHelpText>
        <label>Status Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Assignment</label>
        <referenceTo>TeamMember__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>R00N80000002lZ17EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>whatwereyourgoals__c</fullName>
        <description>What did you set out to accomplish since the last status date</description>
        <inlineHelpText>What did you set out to accomplish since the last status date?</inlineHelpText>
        <label>What were your Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Status Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>StatusIndicator__c</columns>
        <columns>whatwereyourgoals__c</columns>
        <columns>Accomplishments__c</columns>
        <columns>PlannedDeliverables__c</columns>
        <columns>RisksBlockers__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Craig_s</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>PlannedDeliverables__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <filterScope>Everything</filterScope>
        <label>Craig&apos;s</label>
    </listViews>
    <listViews>
        <fullName>Current_Status_Reports</fullName>
        <columns>Project__c</columns>
        <columns>StatusIndicator__c</columns>
        <columns>whatwereyourgoals__c</columns>
        <columns>Accomplishments__c</columns>
        <columns>PlannedDeliverables__c</columns>
        <columns>RisksBlockers__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/16/2014 12:00 AM</value>
        </filters>
        <label>Current Status Reports</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{YYYY}{MM}-{0}</displayFormat>
        <label>Status Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>